Refactor after code review

--- a/newindex.html
+++ b/newindex.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="newstule.css" />
+    <link rel="stylesheet" href="newstyle.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
       rel="stylesheet"
@@ -18,7 +18,7 @@
           <h1><span>elli</span> is <br />peace-of-mind</h1>
           <p>Peace of mind for the caregivers of those living with dementia</p>
           <div class="learn-more-button">
-            <a href="#third-section">Learn More</a>
+            <a href="#subscribe">Learn More</a>
           </div>
         </div>
         <div class="app-preview">
@@ -62,93 +62,84 @@
         </div>
       </div>  -->
 
-      <!-- begin of subscribtion section  -->
-      <div id="third-section">
+      <div class="subscription" id="subscribe">
         <h5>Learn More by Subscribing Below</h5>
-        <div class="subscribtion">
-          <form>
-            <input id="first-name" type="text" placeholder="First Name" />
-            <input id="last-name" type="text" placeholder="Last Name" />
-            <input id="email" type="text" placeholder="Email" />
-            <button class="submit-button" type="submit">Subscribe</button>
-          </form>
-        </div>
+        <form>
+          <input id="first-name" type="text" placeholder="First Name" />
+          <input id="last-name" type="text" placeholder="Last Name" />
+          <input id="email" type="text" placeholder="Email" />
+          <button class="submit-button" type="submit">Subscribe</button>
+        </form>
       </div>
-      <!-- the team members section  -->
-      <div id="fourth-section">
-        <div class="main-container">
-          <div class="first-row">
-            <!-- <img src="assets/images/team-members.jpg" alt="team-members" /> -->
-            <div class="c-members">
-              <div class="member">
-                <img src="assets/images/Paul_avatar_image.jpeg" alt="Paul" />
-                <p>Paul Nichols</p>
-                <h5>CEO - Marketing, Strategy</h5>
-              </div>
-              <div class="member">
-                <img
-                  src="assets/images/Krissy_image_avatar.png"
-                  alt="Krissy Millar"
-                />
-                <p>Krissy Millar</p>
-                <h5>SME - Industry knowledge</h5>
-              </div>
-              <div class="member">
-                <img
-                  src="assets/images/Antony_avatar_image.jpeg"
-                  alt="Matteo Antony Mistretta"
-                />
-                <p>Matteo Antony Mistretta</p>
-                <h5>CTO - Lead Development</h5>
-              </div>
-            </div>
+
+      <div class="fluid-container">
+        <div class="members container">
+          <div class="member">
+            <img src="assets/images/Paul_avatar_image.jpeg" alt="Paul" />
+            <h4>Paul Nichols</h4>
+            <p>CEO - Marketing, Strategy</p>
           </div>
-          <div class="texts-container">
-            <p class="title">OUR FOUNDING TEAM</p>
-            <p class="zero-width-space">&#8203;</p>
-            <p>
-              Krissy, Matteo and I are a team with a unique set of professional
-              and educational know-how, coupled with personal experiences
-              resulting in the passion to deliver.
-            </p>
-            <p class="zero-width-space">&#8203;</p>
-            <p>
-              Krissy has a Masters of Social work and 16 years as a clinical
-              social worker dealing with the issues the informal care network
-              face, Paul an MBA and 10 years experience leading
-              cross-functionally in product focused organisations, Matteo a
-              specialist in mobile technologies and a senior developer for 13
-              years - all three, a passion and drive for creating a difference
-              through projects that promote social change.
-            </p>
-            <p class="zero-width-space">&#8203;</p>
+
+          <div class="member">
+            <img
+              src="assets/images/Krissy_image_avatar.png"
+              alt="Krissy Millar"
+            />
+            <h4>Krissy Millar</h4>
+            <p>SME - Industry knowledge</p>
+          </div>
+
+          <div class="member">
+            <img
+              src="assets/images/Antony_avatar_image.jpeg"
+              alt="Matteo Antony Mistretta"
+            />
+            <h4>Matteo Antony Mistretta</h4>
+            <p>CTO - Lead Development</p>
+          </div>
+
+          <div class="member">
+            <img
+              src="https://avatars3.githubusercontent.com/u/60256254?s=460&u=6a747a01c94b5227ede339c509a6bf26bde3a0cd&v=4"
+              alt="Hamza Dahhani Salvagno"
+            />
+            <h4>Hamza Dahhani Salvagno</h4>
+            <p>CHO - HTML and CSS Expert</p>
           </div>
         </div>
-      </div>
-      <!-- the footer  -->
-      <footer style="height: 80px; background: rgba(51, 13, 84, 1)">
-        <div class="icons-container">
-          <span>
-            <a href="https://www.facebook.com/elliappco" target="_blank">
-              <img
-                class="facebook-icon"
-                alt="Facebook"
-                src="./assets/icons/facebook-icon.jpg"
-            /></a>
-          </span>
-          &nbsp;&nbsp;
-          <span>
-            <a
-              href="https://www.linkedin.com/company/elliappco/"
-              target="_blank"
-            >
-              <img
-                class="LinkedIn-icon"
-                alt="LinkedIn"
-                src="./assets/icons/linkedIn-icon.jpg"
-            /></a>
-          </span>
+
+        <div class="texts container">
+          <h3>OUR FOUNDING TEAM</h3>
+          <p>
+            Krissy, Matteo and I are a team with a unique set of professional
+            and educational know-how, coupled with personal experiences
+            resulting in the passion to deliver.
+          </p>
+          <p>
+            Krissy has a Masters of Social work and 16 years as a clinical
+            social worker dealing with the issues the informal care network
+            face, Paul an MBA and 10 years experience leading cross-functionally
+            in product focused organisations, Matteo a specialist in mobile
+            technologies and a senior developer for 13 years - all three, a
+            passion and drive for creating a difference through projects that
+            promote social change.
+          </p>
         </div>
+      </div>
+
+      <footer>
+        <a href="https://www.facebook.com/elliappco" target="_blank">
+          <img
+            class="facebook-icon"
+            alt="Facebook"
+            src="./assets/icons/facebook-icon.jpg"
+        /></a>
+        <a href="https://www.linkedin.com/company/elliappco/" target="_blank">
+          <img
+            class="LinkedIn-icon"
+            alt="LinkedIn"
+            src="./assets/icons/linkedIn-icon.jpg"
+        /></a>
       </footer>
     </div>
   </body>
