--- a/eoi/index.html
+++ b/eoi/index.html
@@ -12,42 +12,50 @@
   </head>
   <body>
     <div class="main-container">
-      <form class="the-form" action="">
+      <form>
         <h1 class="st-color">Expression of Interest - Focus Group</h1>
 
-        <div class="container credentials">
-          <div class="c-input">
-            <input type="text" placeholder="Full Name" />
-            <i class="icon bx bx-user"></i>
-            <div class="bg"></div>
-          </div>
-          <div class="c-input">
-            <input type="text" placeholder="Email" />
-            <i class="icon bx bx-mail-send"></i>
-            <div class="bg"></div>
-          </div>
+        <div class="credentials">
+          <input type="text" placeholder="First Name" />
+          <input type="text" placeholder="Last Name" />
+          <input type="text" placeholder="Email" />
         </div>
 
-        <div class="container questions">
-          <p>Are you over 18 years old?</p>
-          <input type="checkbox" name="" id="" />
-          <label for="">Yes</label>
-          <input type="checkbox" name="" id="" />
-          <label for="">No</label>
-          <p>Are you caring for someone living with dementia?</p>
-          <input type="checkbox" name="" id="" />
-          <label for="">Yes, currently</label>
-          <input type="checkbox" name="" id="" />
-          <label for="">Yes, in the past</label>
-          <input type="checkbox" name="" id="" />
-          <label for="">Not at the moment</label>
-        </div>
+        <div class="questions">
+          <div>
+            <p>Are you over 18 years old?</p>
+            <span>
+              <input type="radio" />
+              <label for="">Yes</label>
+            </span>
+            <span>
+              <input type="radio" />
+              <label for="">No</label>
+            </span>
+          </div>
 
-        <div>
-          <label for="">Why would you like be part of our focus group?</label>
-          <input type="text" />
-          <button>Register my Interests</button>
+          <div>
+            <p>Are you caring for someone living with dementia?</p>
+            <span>
+              <input type="radio" />
+              <label for="">Yes, currently</label>
+            </span>
+            <span>
+              <input type="radio" />
+              <label for="">Yes, in the past</label>
+            </span>
+            <span>
+              <input type="radio" />
+              <label for="">Not at the moment</label>
+            </span>
+          </div>
+
+          <div>
+            <label for="">Why would you like be part of our focus group?</label>
+            <input type="text" />
+          </div>
         </div>
+        <button>Register my Interests</button>
       </form>
     </div>
   </body>
