--- a/index.html
+++ b/index.html
@@ -71,55 +71,19 @@
         <form
           action="https://elliapp.us3.list-manage.com/subscribe/post?u=55eff7fd86ec88925f500159e&amp;id=6bf536012e"
           method="post"
-          id="mc-embedded-subscribe-form"
-          name="mc-embedded-subscribe-form"
-          class="the-form validate"
           target="_blank"
         >
-          <input
-            type="text"
-            value=""
-            name="FNAME"
-            class=""
-            id="mce-FNAME"
-            placeholder="First Name"
-            required
-          />
-          <input
-            type="text"
-            value=""
-            name="LNAME"
-            class=""
-            id="mce-LNAME"
-            placeholder="Last Name"
-            required
-          />
-          <input
-            type="email"
-            value=""
-            name="EMAIL"
-            class="required email"
-            id="mce-EMAIL"
-            placeholder="Email"
-            required
-          />
+          <input type="text" name="FNAME" placeholder="First Name" required />
+          <input type="text" name="LNAME" placeholder="Last Name" required />
+          <input type="email" name="EMAIL" placeholder="Email" required />
 
-          <button
-            value="Subscribe"
-            name="subscribe"
-            id="mc-embedded-subscribe"
-            class="button submit-button"
-            type="submit"
-          >
-            Subscribe
-          </button>
+          <button type="submit" class="button">Subscribe</button>
 
           <div style="position: absolute; left: -5000px" aria-hidden="true">
             <input
               type="text"
               name="b_55eff7fd86ec88925f500159e_6bf536012e"
               tabindex="-1"
-              value=""
             />
           </div>
         </form>
