get rid of the CDN  library for icons

--- a/eoi/index.html
+++ b/eoi/index.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css"
-      rel="stylesheet"
-    />
     <title>Focus Group EOI</title>
   </head>
   <body>
     <div class="main-container">
       <form
-          action="https://elliapp.us3.list-manage.com/subscribe/post?u=55eff7fd86ec88925f500159e&amp;id=6bf536012e"
-          method="post"
-          target="_blank">
+        action="https://elliapp.us3.list-manage.com/subscribe/post?u=55eff7fd86ec88925f500159e&amp;id=6bf536012e"
+        method="post"
+        target="_blank"
+      >
         <h1 class="st-color">Expression of Interest - Focus Group</h1>
 
         <div class="credentials">
