change fonts for heading and sub-header

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
+      rel="stylesheet"
+    /> -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" href="./assets/logos/elli-logo.png" type="image/png" />
@@ -17,13 +21,10 @@
       <section class="hero">
         <div class="hero-left">
           <h1>
-            <span>elli</span><br />
-            <div>remote-care mobile</div>
+            <span>elli</span>&nbsp;is
+            <div>peace-of-mind</div>
           </h1>
-          <p>
-            application delivering peace-of-mind to the family of those living
-            with dementia
-          </p>
+          <p>A remote-care app for those living with dementia.</p>
           <a class="learn-more-button" href="#subscribe"> Learn More </a>
         </div>
         <div class="app-preview">
