Apply final touches and add analytics

--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>elli is peace-of-mind</title>
+    <meta
+      name="description"
+      content="A remote-care app for those living with dementia."
+    />
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
-      rel="stylesheet"
-    /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./assets/logos/elli-logo.png" type="image/png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dementia App | Elli</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-DVFXV5TBRY"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-DVFXV5TBRY");
+    </script>
   </head>
 
   <body>
@@ -28,7 +42,10 @@
           <a class="learn-more-button" href="#subscribe"> Learn More </a>
         </div>
         <div class="app-preview">
-          <img alt="Phone Image" src="./assets/images/phone-image.jpg" />
+          <img
+            alt="Phone Screenshots"
+            src="./assets/images/splash_screen_and_menu.png"
+          />
         </div>
       </section>
 
