Fix styles based on Paul's feedback

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
   <body>
     <main>
-      <section class="hero">
+      <section class="hero container">
         <div class="hero-left">
           <h1>
-            <span>elli</span>&nbsp;is
-            <div>peace-of-mind</div>
+            <span>elli</span>&nbsp;is<br />
+            peace-of-mind
           </h1>
           <p>A remote-care app for those living with dementia.</p>
-          <a class="learn-more-button" href="#subscribe"> Learn More </a>
+          <a href="#subscribe"> Learn More </a>
         </div>
         <div class="app-preview">
           <img
@@ -53,7 +53,7 @@
         <section class="features container">
           <div class="feature">
             <img src="assets/icons/medication.svg" />
-            <h4>MEDICATION SCHEDULE</h4>
+            <h2>MEDICATION SCHEDULE</h2>
             <p>
               Ensure your loved one is reminded to take their medication and be
               notified when they do.
@@ -62,7 +62,7 @@
 
           <div class="feature">
             <img src="assets/icons/tasks.svg" />
-            <h4>TO-DO LIST</h4>
+            <h2>TO-DO LIST</h2>
             <p>
               Set a list of tasks and remind them based on time or location,
               further notifying you when completed
@@ -71,7 +71,7 @@
 
           <div class="feature">
             <img src="assets/icons/appointment.svg" />
-            <h4>EVENT REMINDERS</h4>
+            <h2>EVENT REMINDERS</h2>
             <p>
               Help them to remember important appointments and be notified when
             </p>
@@ -80,7 +80,7 @@
 
           <div class="feature">
             <img src="assets/icons/location.svg" />
-            <h4>GPS TRACKING​</h4>
+            <h2>GPS TRACKING​</h2>
             <p>
               Keep them safe and know they're not lost with GPS alerts based on
               set locations
@@ -90,7 +90,7 @@
       </div>
 
       <section class="subscription" id="subscribe">
-        <h5>Learn More by Subscribing Below</h5>
+        <h2>Learn More by Subscribing Below</h2>
 
         <form
           action="https://elliapp.us3.list-manage.com/subscribe/post?u=55eff7fd86ec88925f500159e&amp;id=6bf536012e"
@@ -117,7 +117,7 @@
         <section class="members container">
           <div class="member">
             <img src="assets/images/Paul_avatar_image.jpeg" alt="Paul" />
-            <h4>Paul Nichols</h4>
+            <h3>Paul Nichols</h3>
             <p>CEO - Marketing, Strategy</p>
           </div>
 
@@ -126,7 +126,7 @@
               src="assets/images/Krissy_image_avatar.png"
               alt="Krissy Millar"
             />
-            <h4>Krissy Millar</h4>
+            <h3>Krissy Millar</h3>
             <p>SME - Industry knowledge</p>
           </div>
 
@@ -135,13 +135,13 @@
               src="assets/images/Antony_avatar_image.jpeg"
               alt="Matteo Antony Mistretta"
             />
-            <h4>Matteo Antony Mistretta</h4>
+            <h3>Matteo Antony Mistretta</h3>
             <p>CTO - Lead Development</p>
           </div>
         </section>
 
         <section class="texts container">
-          <h3>OUR FOUNDING TEAM</h3>
+          <h2>OUR FOUNDING TEAM</h2>
           <p>
             Paul, Krissy and Matteo are a team with a unique set of professional
             and educational know-how, coupled with personal experiences
