Add OpenGraph info

--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- OpenGraph info -->
+    <meta property="og:title" content="elli is peace-of-mind" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://elliapp.co" />
+    <meta property="og:image" content="./assets/logos/elli-logo.png" />
+
+    <!-- Styles and fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./assets/logos/elli-logo.png" type="image/png" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
