Fix most OpenGraph warnings

--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
 
     <!-- OpenGraph info -->
     <meta property="og:title" content="elli is peace-of-mind" />
+    <meta
+      property="og:description"
+      content="A remote-care app for those living with dementia."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://elliapp.co" />
-    <meta property="og:image" content="./assets/logos/elli-logo.png" />
+    <meta
+      property="og:image"
+      content="https://elliapp.github.io/assets/logos/elli-logo.png"
+    />
 
     <!-- Styles and fonts -->
     <link
@@ -42,7 +49,7 @@
   <body>
     <main>
       <section class="hero container">
-        <div class="hero-left">
+        <div class="left">
           <h1>
             <span>elli</span>&nbsp;is<br />
             peace-of-mind
@@ -50,7 +57,7 @@
           <p>A remote-care app for those living with dementia.</p>
           <a href="#subscribe"> Learn More </a>
         </div>
-        <div class="app-preview">
+        <div class="right">
           <img
             alt="Phone Screenshots"
             src="./assets/images/splash_screen_and_menu.png"
@@ -160,9 +167,9 @@
             Krissy has a Masters of Social work and 16 years as a clinical
             social worker dealing with the issues the informal care network
             face, Paul an MBA and 10 years experience leading cross-functionally
-            in product focused organisations, Matteo a specialist in mobile
-            technologies and a senior developer for 13 years - all three, a
-            passion and drive for creating a difference through projects that
+            in product focused organisations, Matteo Antony a specialist in
+            mobile technologies and a senior developer for 13 years - all three,
+            a passion and drive for creating a difference through projects that
             promote social change.
           </p>
         </section>
