Fix image names and update OG image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://elliapp.co" />
     <meta
       property="og:image"
-      content="https://elliapp.github.io/assets/logos/elli-logo.png"
+      content="https://elliapp.github.io/assets/images/background.jpg"
     />
 
     <!-- Styles and fonts -->
@@ -132,23 +132,20 @@
       <div class="fluid-container">
         <section class="members container">
           <div class="member">
-            <img src="assets/images/Paul_avatar_image.jpeg" alt="Paul" />
+            <img src="assets/images/paul.jpeg" alt="Paul" />
             <h3>Paul Nichols</h3>
             <p>CEO - Marketing, Strategy</p>
           </div>
 
           <div class="member">
-            <img
-              src="assets/images/Krissy_image_avatar.png"
-              alt="Krissy Millar"
-            />
+            <img src="assets/images/krissy.png" alt="Krissy Millar" />
             <h3>Krissy Millar</h3>
             <p>SME - Industry knowledge</p>
           </div>
 
           <div class="member">
             <img
-              src="assets/images/Antony_avatar_image.jpeg"
+              src="assets/images/antony.jpeg"
               alt="Matteo Antony Mistretta"
             />
             <h3>Matteo Antony Mistretta</h3>
