--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
           action="https://elliapp.us3.list-manage.com/subscribe/post?u=55eff7fd86ec88925f500159e&amp;id=6bf536012e"
           method="post"
           target="_blank"
+          class="container"
         >
           <input type="text" name="FNAME" placeholder="First Name" required />
           <input type="text" name="LNAME" placeholder="Last Name" required />
@@ -156,9 +157,9 @@
         <section class="texts container">
           <h2>OUR FOUNDING TEAM</h2>
           <p>
-            Paul, Krissy and Matteo are a team with a unique set of professional
-            and educational know-how, coupled with personal experiences
-            resulting in the passion to deliver.
+            Paul, Krissy and Matteo Antony are a team with a unique set of
+            professional and educational know-how, coupled with personal
+            experiences resulting in the passion to deliver.
           </p>
           <p>
             Krissy has a Masters of Social work and 16 years as a clinical
